# Rawlsian-Agents

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
examples/: basic_draft_example.py  claims_processor_example.py  pdf_to_template.py
health_checks/: gender_bias.py
health_checks/benchmark_drafter/: benchmark_draft.py
health_checks/benchmark_drafter/benchmark_drafter_output/: final_agreement.md
health_checks/gender_bias/: gender_bias.py  gender_bias_eda.py  run_100_experiments.py  run_100_experiments_parallel.py
health_checks/gender_bias/gender_bias_inputs/: initial_conditions__man_man.txt
health_checks/gender_bias/gender_bias_outputs/: cross_combination_std.eps  gender_bias_cdf.eps  gender_bias_cdf_with_ks.eps  gender_bias_results.csv  ks_test_results.eps  risks_and_mitigations__man_man.md  risks_and_mitigations__man_woman.md  risks_and_mitigations__woman_man.md  scores.json
health_checks/gender_bias_inputs/: initial_conditions__man_man.txt  initial_conditions__man_woman.txt  initial_conditions__woman_man.txt  initial_conditions__woman_woman.txt
health_checks/gender_bias_outputs/: risks_and_mitigations__man_man.md  risks_and_mitigations__man_woman.md  risks_and_mitigations__woman_man.md  risks_and_mitigations__woman_woman.md  scores.json
simulations/: autogen_basic.py  autogen_lawyer.py  langchain_script.py
src/docs/: LeVan vs LeVan Highlights EPAM 23.txt  LeVan vs LeVan case.ipynb  LeVan vs LeVan final agreement.md  LeVan vs LeVan initial agreement.md
src/docs/Commercial Lanudries_Tenant/: case_file.txt  initial_conditions.txt
src/docs/Commercial Laundries Tenant/: combined_risks.md  final_agreement.md  full_workflow.py  initial_agreement.md  initial_draft.py  recovered_claims.txt  risks_and_mitigations.md
src/docs/Commercial Laundries_Tenant/: initial_conditions.txt  initial_draft.py
src/docs/LeVan vs LeVan/: combined_risks.md  final_agreement.md  initial_agreement.md  initial_conditions_free_text.txt  recovered_claims.txt  risks_and_mitigations.md
src/docs/SC vs TC/: case_file.txt  combined_risks.md  final_agreement.md  initial_agreement.md  initial_conditions_free_text.txt  recovered_claims.txt  risks_and_mitigations.md
src/docs/lease_agreements_sample/: 2017-03-12-Lease-Agreement-DRAFT.md  Multi_tenant_Industrial_Lease.docx  Pro_tenant__Stand_alone_Commercial_Lease.docx  Shopping_Centre_Lease_Longer_Form.docx
src/fairplay/: basic.py  claims_processor.py  main.py  models.py  sf_proposal.py  system_messages.py  with_lawyer.py
src/fairplay/agents/: arbitrator.py  base_agent.py  basic_drafter.py  best_effort_drafter.py  case_processor.py  claims_processor.py  drafter.py  reviewer.py
src/rawlsian_agents/: main.ipynb  main.py  models.py
src/rawlsian_agents/agents/: arbitrator.py  base_agent.py  basic_drafter.py  best_effort_drafter.py  claims_processor.py  drafter.py  reviewer.py
src/rawlsian_agents/utils/: commercial_lease_templates.py  prenup_templates.py  prompts.py
visual_architecture/: two_reviewers_one_arbitrator  two_reviewers_one_arbitrator.eps  two_reviewers_one_arbitrator.ipynb
