[project]
name = "rawlsian-agents"
version = "0.1.1"
description = "An Application of Large Language Models (LLM) to Forge Fairer Bilateral Agreements"
authors = [
    {name = "Jenny Tai", email = "jenny.tai@uwaterloo.ca"},
    {name = "Sergio M. Ferro", email = "sm.ferro54@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.6.0",
    "autogen==0.3.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "docker==7.1.0",
    "flaml[automl]>=2.3.2,<3.0.0",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "idna==3.10",
    "jiter==0.5.0",
    "langchain>=0.3.15,<0.4.0",
    "langchain-openai>=0.3.2,<0.4.0",
    "numpy==1.26.4",
    "openai>=1.51.0",
    "packaging==24.1",
    "pydantic>=2.10.6,<3.0.0",
    "pydantic-core>=2.23.4",
    "python-dotenv>=1.0.1,<2.0.0",
    "regex==2024.9.11",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "termcolor==2.4.0",
    "tiktoken==0.7.0",
    "tqdm==4.66.5",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "graphviz>=0.20.3,<1.0.0",
    "isort>=6.0.1,<7.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "evaluate>=0.4.3,<1.0.0",
    "torch>=2.6.0,<3.0.0",
    "bert-score>=0.3.13,<1.0.0",
    "markitdown[all]>=0.1.2",
]

[project.scripts]
rawlsian-agents = "rawlsian_agents.main:main"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5,<7.0.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/rawlsian_agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
